--- a/VpdbAgent/packages.config
+++ b/VpdbAgent/packages.config
@@ -1,36 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="akavache" version="4.1.2" targetFramework="net452" />
-  <package id="akavache.core" version="4.1.2" targetFramework="net452" />
-  <package id="akavache.sqlite3" version="4.1.2" targetFramework="net452" />
-  <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
-  <package id="DeltaCompressionDotNet" version="1.0.0" targetFramework="net452" />
-  <package id="FluentAssertions" version="4.1.1" targetFramework="net452" />
-  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.5" targetFramework="net452" />
-  <package id="HashLib" version="2.0.1" targetFramework="net452" />
-  <package id="Humanizer" version="1.37.7" targetFramework="net452" />
-  <package id="ini-parser" version="2.2.2" targetFramework="net452" />
-  <package id="LoadingIndicators.WPF" version="0.0.1" targetFramework="net452" />
-  <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net452" />
-  <package id="Mindscape.Raygun4Net" version="5.2.0" targetFramework="net452" />
-  <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
-  <package id="NLog" version="4.2.1" targetFramework="net452" />
-  <package id="NLog.Config" version="4.2.1" targetFramework="net452" />
-  <package id="NLog.Schema" version="4.2.1" targetFramework="net452" />
-  <package id="OpenMcdf" version="2.0.5739.40493" targetFramework="net452" />
-  <package id="PusherClient" version="0.3.0" targetFramework="net452" />
-  <package id="reactiveui" version="6.5.0" targetFramework="net452" />
-  <package id="reactiveui-core" version="6.5.0" targetFramework="net452" />
-  <package id="refit" version="2.4.1" targetFramework="net452" />
-  <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
-  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
-  <package id="Rx-Linq" version="2.2.5" targetFramework="net452" />
-  <package id="Rx-Main" version="2.2.5" targetFramework="net452" />
-  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net452" />
-  <package id="Rx-XAML" version="2.2.5" targetFramework="net452" />
-  <package id="Splat" version="1.6.2" targetFramework="net452" />
-  <package id="SQLitePCL.raw_basic" version="0.8.3" targetFramework="net452" />
-  <package id="squirrel.windows" version="1.2.1" targetFramework="net452" />
-  <package id="WebSocket4Net" version="0.14.1" targetFramework="net452" />
+  <package id="akavache" version="4.1.2" targetFramework="net45" />
+  <package id="akavache.core" version="4.1.2" targetFramework="net45" />
+  <package id="akavache.sqlite3" version="4.1.2" targetFramework="net45" />
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net45" />
+  <package id="DeltaCompressionDotNet" version="1.0.0" targetFramework="net45" />
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.5" targetFramework="net45" requireReinstallation="true" />
+  <package id="HashLib" version="2.0.1" targetFramework="net45" />
+  <package id="Humanizer" version="1.37.7" targetFramework="net45" />
+  <package id="ini-parser" version="2.2.4" targetFramework="net45" />
+  <package id="LoadingIndicators.WPF" version="0.0.1" targetFramework="net45" />
+  <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net45" />
+  <package id="Mindscape.Raygun4Net" version="5.2.0" targetFramework="net45" />
+  <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="NLog" version="4.2.3" targetFramework="net45" />
+  <package id="OpenMcdf" version="2.0.5739.40493" targetFramework="net45" />
+  <package id="PusherClient" version="0.3.0" targetFramework="net45" />
+  <package id="reactiveui" version="6.5.0" targetFramework="net45" />
+  <package id="reactiveui-core" version="6.5.0" targetFramework="net45" />
+  <package id="refit" version="2.4.1" targetFramework="net45" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-XAML" version="2.2.5" targetFramework="net45" />
+  <package id="Splat" version="1.6.2" targetFramework="net45" />
+  <package id="SQLitePCL.raw_basic" version="0.8.3" targetFramework="net45" />
+  <package id="squirrel.windows" version="1.2.1" targetFramework="net45" />
+  <package id="WebSocket4Net" version="0.13.1" targetFramework="net45" />
 </packages>
