Fixed CI config.

--- a/VpdbAgent.Tests/packages.config
+++ b/VpdbAgent.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="coveralls.net" version="0.6.0" targetFramework="net452" />
   <package id="DeltaCompressionDotNet" version="1.0.0" targetFramework="net452" />
   <package id="FluentAssertions" version="4.1.1" targetFramework="net452" />
   <package id="ini-parser" version="2.2.4" targetFramework="net452" />
@@ -7,6 +8,7 @@
   <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="NLog" version="4.2.3" targetFramework="net452" />
+  <package id="OpenCover" version="4.6.166" targetFramework="net452" />
   <package id="PusherClient" version="0.3.0" targetFramework="net452" />
   <package id="reactiveui-core" version="6.5.0" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
