--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,6 @@ build:
   verbosity: minimal
 test_script:
 - ps: >-
-    .\src\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user -target:xunit.console.clr4.exe "-targetargs:""VpdbAgent.Tests\bin\$env:CONFIGURATION\VpdbAgent.Tests.dll"" /noshadow /appveyor" -filter:"+[VpdbAgent*]*" -excludebyattribute:"*.ExcludeFromCoverageAttribute" -output:opencoverCoverage.xml
-    $coveralls = (Resolve-Path "src/packages/coveralls.net.*/tools/csmacnz.coveralls.exe").ToString()
+    .\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user -target:xunit.console.clr4.exe "-targetargs:""VpdbAgent.Tests\bin\$env:CONFIGURATION\VpdbAgent.Tests.dll"" /noshadow /appveyor" -filter:"+[VpdbAgent*]*" -excludebyattribute:"*.ExcludeFromCoverageAttribute" -output:opencoverCoverage.xml
+    $coveralls = (Resolve-Path "packages/coveralls.net.*/tools/csmacnz.coveralls.exe").ToString()
     & $coveralls --opencover -i opencoverCoverage.xml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_JOB_ID
