--- a/VpdbAgent.Tests/packages.config
+++ b/VpdbAgent.Tests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
+  <package id="Common.Logging.NLog41" version="3.3.1" targetFramework="net452" />
   <package id="coveralls.net" version="0.6.0" targetFramework="net452" />
   <package id="DeltaCompressionDotNet" version="1.0.0" targetFramework="net452" />
   <package id="FluentAssertions" version="4.1.1" targetFramework="net452" />
@@ -26,5 +29,6 @@
   <package id="xunit.core" version="2.1.0" targetFramework="net452" />
   <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net452" />
   <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.NLog.Common" version="1.1.0" targetFramework="net452" />
   <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net452" />
 </packages>
