--- a/VpdbAgent.Tests/packages.config
+++ b/VpdbAgent.Tests/packages.config
@@ -29,6 +29,6 @@
   <package id="xunit.core" version="2.1.0" targetFramework="net452" />
   <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net452" />
   <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.NLog.Common" version="1.1.0" targetFramework="net452" />
+  <package id="xunit.NLog" version="1.0.1" targetFramework="net452" />
   <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net452" />
 </packages>
