--- a/VpdbAgent/NLog.config
+++ b/VpdbAgent/NLog.config
@@ -4,6 +4,10 @@
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false">
+
+    <extensions>
+        <add assembly="xunit.NLog" />
+    </extensions>
     
     <targets>
 
@@ -24,10 +28,12 @@
         </target>
 
         <target name="memory" xsi:type="Memory" layout="${pad:padding=4:inner=[${threadid}]} ${date} ${pad:padding=5:inner=${level:uppercase=true}} | ${message} ${exception:format=ToString}" />
+        <target name="test" xsi:type="TestOutput" layout="${time}|${level:uppercase=true}|${logger}|${message}"  />
     </targets>
 
     <rules>
         <logger name="*" minlevel="Trace" writeTo="console" />
         <logger name="*" minlevel="Trace" writeTo="memory" />
+        <logger name="*" minlevel="Trace" writeTo="test" />
     </rules>
 </nlog>
