--- a/VpdbAgent/VpdbAgent.nuspec
+++ b/VpdbAgent/VpdbAgent.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>VpdbAgent</id>
-        <version>0.0.6.1</version>
+        <version>0.0.7</version>
         <authors>freezy</authors>
         <owners>freezy</owners>
         <licenseUrl>https://raw.githubusercontent.com/freezy/vpdb-agent/master/LICENSE</licenseUrl>
@@ -11,7 +11,7 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>VPDB Agent</description>
         <summary>A Windows desktop application that syncs local data with VPDB.</summary>
-        <releaseNotes>First Update.</releaseNotes>
+        <releaseNotes></releaseNotes>
         <language>en-US</language>
     </metadata>
     <files>
