--- a/VpdbAgent/packages.config
+++ b/VpdbAgent/packages.config
@@ -49,6 +49,8 @@
   <package id="Humanizer.Core.zh-Hans" version="2.1.0" targetFramework="net452" />
   <package id="Humanizer.Core.zh-Hant" version="2.1.0" targetFramework="net452" />
   <package id="ini-parser" version="2.3.0" targetFramework="net452" />
+  <package id="JetBrains.Annotations" version="10.2.1" targetFramework="net452" />
+  <package id="LiteDB" version="3.0.0-beta3" targetFramework="net452" />
   <package id="LoadingIndicators.WPF" version="0.0.1" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.4.0" targetFramework="net452" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
