--- a/VpdbAgent/VpdbAgent.csproj
+++ b/VpdbAgent/VpdbAgent.csproj
@@ -265,6 +265,10 @@
     <Compile Include="Common\Extensions\Common.cs" />
     <Compile Include="Common\Filesystem\Directory.cs" />
     <Compile Include="Common\Filesystem\File.cs" />
+    <Compile Include="Data\Json\Mapping.cs" />
+    <Compile Include="Data\Objects\Platform.cs" />
+    <Compile Include="Data\Json\PlatformData.cs" />
+    <Compile Include="Data\Objects\PlatformType.cs" />
     <Compile Include="Libs\Diff.cs" />
     <Compile Include="Models\TableFile.cs" />
     <Compile Include="PinballX\MarshallManager.cs" />
@@ -513,6 +517,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\Models\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SQLitePCL.raw_basic.0.8.6\build\net45\SQLitePCL.raw_basic.targets" Condition="Exists('..\packages\SQLitePCL.raw_basic.0.8.6\build\net45\SQLitePCL.raw_basic.targets')" />
