--- a/VpdbAgent/packages.config
+++ b/VpdbAgent/packages.config
@@ -48,9 +48,9 @@
   <package id="Humanizer.Core.zh-CN" version="2.1.0" targetFramework="net452" />
   <package id="Humanizer.Core.zh-Hans" version="2.1.0" targetFramework="net452" />
   <package id="Humanizer.Core.zh-Hant" version="2.1.0" targetFramework="net452" />
-  <package id="ini-parser" version="2.3.0" targetFramework="net452" />
-  <package id="JetBrains.Annotations" version="10.2.1" targetFramework="net452" />
-  <package id="LiteDB" version="3.0.0-beta3" targetFramework="net452" />
+  <package id="ini-parser" version="3.4.0" targetFramework="net452" />
+  <package id="JetBrains.Annotations" version="10.3.0" targetFramework="net452" />
+  <package id="LiteDB" version="3.0.1" targetFramework="net452" />
   <package id="LoadingIndicators.WPF" version="0.0.1" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.4.0" targetFramework="net452" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
@@ -59,10 +59,10 @@
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NLog" version="4.4.1" targetFramework="net452" />
-  <package id="OpenMcdf" version="2.0.5739.40493" targetFramework="net45" />
+  <package id="OpenMcdf" version="2.1.0.33051" targetFramework="net452" />
   <package id="PusherClient" version="0.4.0" targetFramework="net452" />
-  <package id="reactiveui" version="7.0.0" targetFramework="net452" />
-  <package id="reactiveui-core" version="7.0.0" targetFramework="net452" />
+  <package id="reactiveui" version="7.2.0" targetFramework="net452" />
+  <package id="reactiveui-core" version="7.2.0" targetFramework="net452" />
   <package id="refit" version="3.0.1" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
@@ -78,7 +78,8 @@
   <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.0" targetFramework="net452" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.0" targetFramework="net452" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.0" targetFramework="net452" />
-  <package id="squirrel.windows" version="1.5.1" targetFramework="net452" />
+  <package id="squirrel.windows" version="1.5.2" targetFramework="net452" />
+  <package id="SuperSocket.ClientEngine.Core" version="0.8.0.6" targetFramework="net452" />
   <package id="System.Collections" version="4.3.0" targetFramework="net452" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net452" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net452" />
@@ -89,7 +90,7 @@
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net452" />
   <package id="System.Linq" version="4.3.0" targetFramework="net452" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net452" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.1" targetFramework="net452" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net452" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net452" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net452" />
@@ -109,5 +110,5 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net452" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
-  <package id="WebSocket4Net" version="0.14.1" targetFramework="net452" />
+  <package id="WebSocket4Net" version="0.15.0-beta6" targetFramework="net452" />
 </packages>
