--- a/VpdbAgent/VpdbAgent.csproj
+++ b/VpdbAgent/VpdbAgent.csproj
@@ -263,6 +263,7 @@
     <Compile Include="AkavacheSqliteLinkerOverride.cs" />
     <Compile Include="Application\CrashManager.cs" />
     <Compile Include="Application\DatabaseManager.cs" />
+    <Compile Include="Application\MappingManager.cs" />
     <Compile Include="Application\MessageManager.cs" />
     <Compile Include="Application\PlatformManager.cs" />
     <Compile Include="Application\ThreadManager.cs" />
@@ -271,11 +272,8 @@
     <Compile Include="Common\Filesystem\File.cs" />
     <Compile Include="Common\Filesystem\PathHelper.cs" />
     <Compile Include="Data\DatabaseManager.cs" />
-    <Compile Include="Data\Json\Mapping.cs" />
-    <Compile Include="Data\Objects\AggregatedGame.cs" />
-    <Compile Include="Data\Objects\Platform.cs" />
-    <Compile Include="Data\Json\PlatformData.cs" />
-    <Compile Include="Data\Objects\PlatformType.cs" />
+    <Compile Include="Data\Mapping.cs" />
+    <Compile Include="Data\AggregatedGame.cs" />
     <Compile Include="Libs\Diff.cs" />
     <Compile Include="Models\TableFile.cs" />
     <Compile Include="PinballX\MarshallManager.cs" />
@@ -338,7 +336,6 @@
     </Compile>
     <Compile Include="Application\GameManager.cs" />
     <Compile Include="Models\Game.cs" />
-    <Compile Include="Models\Platform.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="ViewModels\Games\GameItemViewModel.cs" />
     <Compile Include="ViewModels\Settings\SettingsViewModel.cs" />
@@ -352,7 +349,6 @@
     <Compile Include="ViewModels\Games\GamesViewModel.cs" />
     <Compile Include="PinballX\FileSystemWatcher.cs" />
     <Compile Include="PinballX\MenuManager.cs" />
-    <Compile Include="Models\PlatformDatabase.cs" />
     <Compile Include="PinballX\Models\PinballXGame.cs" />
     <Compile Include="PinballX\Models\PinballXMenu.cs" />
     <Compile Include="PinballX\Models\PinballXSystem.cs" />
