Fixed visibility issues and added table thumb back to games list.

--- a/VpdbAgent/VpdbAgent.csproj
+++ b/VpdbAgent/VpdbAgent.csproj
@@ -261,6 +261,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AkavacheSqliteLinkerOverride.cs" />
+    <Compile Include="Common\TypeConverters\NullToVisibilityConverter.cs" />
+    <Compile Include="Common\TypeConverters\NullConverter.cs" />
     <Compile Include="Vpdb\VpdbManager.cs" />
     <Compile Include="Application\CrashManager.cs" />
     <Compile Include="Application\DatabaseManager.cs" />
