--- a/VpdbAgent/VpdbAgent.csproj
+++ b/VpdbAgent/VpdbAgent.csproj
@@ -349,7 +349,7 @@
     </Compile>
     <Compile Include="ViewModels\Games\GamesViewModel.cs" />
     <Compile Include="PinballX\FileSystemWatcher.cs" />
-    <Compile Include="PinballX\MenuManager.cs" />
+    <Compile Include="PinballX\PinballXManager.cs" />
     <Compile Include="PinballX\Models\PinballXGame.cs" />
     <Compile Include="PinballX\Models\PinballXMenu.cs" />
     <Compile Include="PinballX\Models\PinballXSystem.cs" />
